Update and rename personal.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
         <tr>
             <td>
-                <img src="https://yt3.ggpht.com/yti/AJo0G0l0yW0K4H9SpYh8oKzX3iodWcc3P0a_InYzfUWFHA=s108-c-k-c0x00ffffff-no-rj" alt="Aksh's image">
+                <img src="dp.jpg" alt="Aksh's image">
             </td>
             <td>
                 <h1>Aksh Girgilani</h1>
