--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
         <tr>
             <td>
-                <img src="dp.jpg" alt="Aksh's image">
+                <img src="Images/dp.jpg" alt="Aksh's image">
             </td>
             <td>
                 <h1>Aksh Girgilani</h1>
@@ -65,7 +65,7 @@
     </table>
     <hr>
     <p><a href="mailto:aksh.girgilani@gmail.com" target="_blank">Mail Me|</a>
-    <a href="C:\Users\KIIT\Documents\programs\webdevelop.html\Contact.html" target="_blank">Contact me|</a></p>
+    <a href="Contact.html" target="_blank">Contact me|</a></p>
 
 </body>
 </html>
