--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
         <tr>
             <td>
-                <img src="Images/dp.jpg" alt="Aksh's image">
+                <img src="/Images/dp.jpg" alt="Aksh's image">
             </td>
             <td>
                 <h1>Aksh Girgilani</h1>
