--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Drago🔱</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <table>
+    <table class="center">
         <tr>
             <td>
                 <img src="Images/dp.jpg" alt="Aksh's image">
@@ -18,7 +19,7 @@
     <hr>
     <h2 style="text-align:center;"><em>Learn but with a <strong>different mindset</strong></em></h2>
     <hr>
-    <h3>Knowledge and achievements</h3>
+    <h3><u>Knowledge and achievements</u></h3>
     <ul>
         <li><b>Professional Video Editor(<a href="https://www.instagram.com/drago.af/" target="_blank">VN</a>, <a href="https://www.youtube.com/@DragoVlogs/featured" target="_blank">Adobe Premiere Pro)</a></b></li>
         <li><b>B.Tech in Computer Engineering</b></li>
@@ -27,7 +28,7 @@
         <li><b>Business knowledge of various fields:</b><br>Real Estate, Money Market, Clothing.</li>
     </ul>
     <hr>
-    <h3>Skills</h3>
+    <h3><u>Skills</u></h3>
     <table cellspacing="10px;">
         <tr>
             <td>
@@ -65,7 +66,7 @@
     </table>
     <hr>
     <p><a href="mailto:aksh.girgilani@gmail.com" target="_blank">Mail Me|</a>
-    <a href="Contact.html" target="_blank">Contact me|</a></p>
+    <a href="C:\Users\KIIT\Documents\programs\webdevelop.html\Contact.html" target="_blank">Contact me|</a></p>
 
 </body>
 </html>
