--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Contact Info</h1>
