--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </table>
     <hr>
     <p><a href="mailto:aksh.girgilani@gmail.com" target="_blank">Mail Me|</a>
-    <a href="C:\Users\KIIT\Documents\programs\webdevelop.html\Contact.html" target="_blank">Contact me|</a></p>
+    <a href="Contact.html" target="_blank">Contact me|</a></p>
 
 </body>
 </html>
